--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "adapt-theme-ko",
-  "version": "1.0.3",
-  "framework": "^2.1.0",
+  "version": "1.1.0",
+  "framework": ">=2.1.0",
   "homepage": "https://github.com/kingsonline/adapt-theme-ko",
   "displayName": "King's Online",
   "theme": "ko",
